fix: 路由同步优化
